syntax = "proto3";

option csharp_namespace = "Shared";

import "google/protobuf/timestamp.proto";

package meteorite;

service Meteorite {
  rpc GetMeteoriteLandings(MeteoriteLandingsRequest) returns (MeteoriteLandingsReply) {};
}

message MeteoriteLandingsRequest {
  int32 skip = 1;
  int32 take = 2;
}

message MeteoriteLandingsReply {
  repeated int32 MeteoriteLandings = 1;
}

message MeteoriteLanding {
  int32 id = 1;
  string name = 2;
  string fall = 3;
  GeoLocation geolocation = 4;
  double mass = 5;
  string nametype = 6;
  string recclass = 7;
  double reclat = 8;
  double reclong = 9;
  //google.protobuf.Timestamp year = 10;
}

message GeoLocation {
  string type = 1;
  repeated double coordinates = 2;
}
